--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY = #Add_your_api_key
-GROQ_API_KEY = #Add_your_api_key
+API_KEY ="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"
+GROQ_API_KEY = "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"
